# fact-finder

./: 01_data_generator.ipynb  02_extractor.ipynb  03_eval.ipynb  README.md  fact_finder.py  gold.json  pyproject.toml
