[project]
name = "nevis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.82.1",
    "tiktoken>=0.9.0",
    "pydantic[email]>=2.11.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "pandas>=2.2.3",
    "faker>=37.3.0",
    "python-dateutil>=2.9.0.post0",
    "deepdiff>=8.5.0",
    "evals>=3.0.1.post1",
    "deepeval>=2.5.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
